agregado de bootstrap en archivo css y modificaciones del componente html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,16 @@
 <p>
   probando stackblitz :)
 </p>
+<div class="bg-primary text-primary">
+  <div class="alert alert-primary" role="alert">
+    A simple primary alert—check it out!
+  </div>
+  <div class="alert alert-danger d-flex align-items-center" role="alert">
+  <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+  <div>
+    An example danger alert with an icon
+  </div>
+</div>
+<button type="button" class="btn btn-danger">Danger</button>
+  <h2>holaaaa</h2>
+</div>
